Web Inspector: Close button on selected item in Network tab is misaligned https://bugs.webkit.org/show_bug.cgi?id=160884
Patch by Devin Rousso <dcrousso+webkit@gmail.com> on 2016-08-15
Reviewed by Matt Baker.

* UserInterface/Views/NetworkSidebarPanel.css:
(.sidebar > .panel.navigation.network .status .close.status-button):

Canonical link: https://commits.webkit.org/178987@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204491 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/NetworkSidebarPanel.css
+++ b/Source/WebInspectorUI/UserInterface/Views/NetworkSidebarPanel.css
@@ -74,6 +74,10 @@
     display: none;
 }
 
+.sidebar > .panel.navigation.network .status .close.status-button {
+    padding-bottom: 1px;
+}
+
 .sidebar > .panel.navigation.network.network-grid-content-view-showing .status .close.status-button {
     display: none;
 }
